codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_widget_active.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"• Analyzing (0s • esc чтобы прервать)                                          "
"                                                                                "
"                                                                                "
"› Спросите Lavilas Codex о чём угодно                                                      "
"                                                                                "
"  gpt-5.3-codex default · 100% left · /tmp/project                              "
