codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_widget_and_approval_modal.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                                    "
"  Разрешить выполнение команды?                                                                     "
"                                                                                                    "
"  Причина: this is a test reason such as one that would be produced by the model                   "
"                                                                                                    "
"  $ echo 'hello world'                                                                              "
"                                                                                                    "
"› 1. Да, выполнить (y)                                                                              "
"  2. Да, и больше не спрашивать для команд, начинающихся с `echo 'hello world'` (p)               "
"  3. Нет, и дать другое указание (esc)                                                             "
"                                                                                                    "
"  Нажмите Enter для подтверждения, или Esc для отмены | Клик по варианту — выбрать                "
