codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_wait_status_renders_command_in_single_details_row.snap
---
source: tui/src/chatwidget/tests.rs
expression: rendered
---
• Ожидание фонового терминала (0s • esc чтобы…
  └ cargo test -p codex-core -- --exact…


› Спросите Lavilas Codex о чём угодно

  gpt-5.3-codex default · 100% left · /tmp/proj…
