codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__update_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend().vt100().screen().contents()
---
  ✨ Доступно обновление. Установить новую версию?

  Что нового: https://github.com/Perdonus/lavilas-code/releases/latest


› 1. Да, обновить сейчас
  2. Не сейчас
  3. Больше не напоминать

  Нажмите enter для подтверждения или esc для возврата
